first page done

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     </style>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body>
+  <body> 
+    <!-- HEADER -->
     <header>
       <div class="container upper-flex-container">
         <nav class="navigation">
-          <a class="logo-header" href="./test.html" lang="en"
+          <a class="logo-header" href="./index.html" lang="en"
             ><span class="logo-nav">Web</span>Studio</a
           >
           <ul class="nav-list">
