--- a/portfolio.html
+++ b/portfolio.html
@@ -15,12 +15,12 @@
     <header>
       <div class="container upper-flex-container">
         <nav class="navigation">
-          <a class="logo-header" href="./test.html" lang="en"
+          <a class="logo-header" href="./index.html" lang="en"
             ><span class="logo-nav">Web</span>Studio</a
           >
           <ul class="nav-list">
-            <li class="nav-items"><a class="nav-link active" href="./test.html">Студія</a></li>
-            <li class="nav-items"><a class="nav-link" href="./portfolio.html">Портфоліо</a></li>
+            <li class="nav-items"><a class="nav-link" href="./index.html">Студія</a></li>
+            <li class="nav-items"><a class="nav-link active" href="./portfolio.html">Портфоліо</a></li>
             <li class="nav-items"><a class="nav-link" href="">Контакти</a></li>
           </ul>
         </nav>
