--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,9 @@
           >
           <ul class="nav-list">
             <li class="nav-items"><a class="nav-link" href="./index.html">Студія</a></li>
-            <li class="nav-items"><a class="nav-link active" href="./portfolio.html">Портфоліо</a></li>
+            <li class="nav-items">
+              <a class="nav-link active" href="./portfolio.html">Портфоліо</a>
+            </li>
             <li class="nav-items"><a class="nav-link" href="">Контакти</a></li>
           </ul>
         </nav>
@@ -61,67 +63,148 @@
 
           <ul class="cards-list">
             <li class="cards-items">
-              <img class="cards-img" src="./img/tehnokrak(1).jpg" alt="" width="370" />
-              <div class="cards-wrapper">
-                <h2 class="cards-header">Технокряк</h2>
-                <p class="cards-txt">Веб-сайт</p>
-              </div>
+              <a class="cards-link" href="">
+                <div class="background-wrapper">
+                  <img class="cards-img" src="./img/tehnokrak(1).jpg" alt="" width="370" />
+                  <div class="cards-transparent-box">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </div>
+                </div>
+                <div class="cards-wrapper">
+                  <h2 class="cards-header">Технокряк</h2>
+                  <p class="cards-txt">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="cards-items">
-              <img class="cards-img" src="./img/design(1).jpg" alt="" width="370" />
-              <div class="cards-wrapper">
-                <h2 class="cards-header">Постер New Orlean vs Golden Star</h2>
-                <p class="cards-txt">Дизайн</p>
-              </div>
+              <a class="cards-link" href="">
+                <div class="background-wrapper">
+                  <img class="cards-img" src="./img/design(1).jpg" alt="" width="370" />
+                  <div class="cards-transparent-box">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </div>
+                </div>
+                <div class="cards-wrapper">
+                  <h2 class="cards-header">Постер New Orlean vs Golden Star</h2>
+                  <p class="cards-txt">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="cards-items">
-              <img class="cards-img" src="./img/app(1).jpg" alt="" width="370" />
-              <div class="cards-wrapper">
-                <h2 class="cards-header">Ресторан Seafood</h2>
-                <p class="cards-txt">Додаток</p>
-              </div>
+              <a class="cards-link" href="">
+                <div class="background-wrapper">
+                  <img class="cards-img" src="./img/app(1).jpg" alt="" width="370" />
+                  <div class="cards-transparent-box">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </div>
+                </div>
+                <div class="cards-wrapper">
+                  <h2 class="cards-header">Ресторан Seafood</h2>
+                  <p class="cards-txt">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="cards-items">
-              <img class="cards-img" src="./img/marketin(1).jpg" alt="" width="370" />
-              <div class="cards-wrapper">
-                <h2 class="cards-header">Проєкт Prime</h2>
-                <p class="cards-txt">Маркетинг</p>
-              </div>
+              <a class="cards-link" href="">
+                <div class="background-wrapper">
+                  <img class="cards-img" src="./img/marketin(1).jpg" alt="" width="370" />
+                  <div class="cards-transparent-box">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </div>
+                </div>
+                <div class="cards-wrapper">
+                  <h2 class="cards-header">Проєкт Prime</h2>
+                  <p class="cards-txt">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="cards-items">
-              <img class="cards-img" src="./img/box(1).jpg" alt="" width="370" />
-              <div class="cards-wrapper">
-                <h2 class="cards-header">Проєкт Boxes</h2>
-                <p class="cards-txt">Додаток</p>
-              </div>
+              <a class="cards-link" href="">
+                <div class="background-wrapper">
+                  <img class="cards-img" src="./img/box(1).jpg" alt="" width="370" />
+                  <div class="cards-transparent-box">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </div>
+                </div>
+                <div class="cards-wrapper">
+                  <h2 class="cards-header">Проєкт Boxes</h2>
+                  <p class="cards-txt">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="cards-items">
-              <img class="cards-img" src="./img/web-site(1).jpg" alt="" width="370" />
-              <div class="cards-wrapper">
-                <h2 class="cards-header">Inspiration has no Borders</h2>
-                <p class="cards-txt">Веб-сайт</p>
-              </div>
+              <a class="cards-link" href="">
+                <div class="background-wrapper">
+                  <img class="cards-img" src="./img/web-site(1).jpg" alt="" width="370" />
+                  <div class="cards-transparent-box">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </div>
+                </div>
+                <div class="cards-wrapper">
+                  <h2 class="cards-header">Inspiration has no Borders</h2>
+                  <p class="cards-txt">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="cards-items">
-              <img class="cards-img" src="./img/book(1).jpg" alt="" width="370" />
-              <div class="cards-wrapper">
-                <h2 class="cards-header">Видання Limited Edition</h2>
-                <p class="cards-txt">Дизайн</p>
-              </div>
+              <a class="cards-link" href="">
+                <div class="background-wrapper">
+                  <img class="cards-img" src="./img/book(1).jpg" alt="" width="370" />
+                  <div class="cards-transparent-box">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </div>
+                </div>
+                <div class="cards-wrapper">
+                  <h2 class="cards-header">Видання Limited Edition</h2>
+                  <p class="cards-txt">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="cards-items">
-              <img class="cards-img" src="./img/proj(1).jpg" alt="" width="370" />
-              <div class="cards-wrapper">
-                <h2 class="cards-header">Проєкт LAB</h2>
-                <p class="cards-txt">Маркетинг</p>
-              </div>
+              <a class="cards-link" href="">
+                <div class="background-wrapper">
+                  <img class="cards-img" src="./img/proj(1).jpg" alt="" width="370" />
+                  <div class="cards-transparent-box">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </div>
+                </div>
+                <div class="cards-wrapper">
+                  <h2 class="cards-header">Проєкт LAB</h2>
+                  <p class="cards-txt">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="cards-items">
-              <img class="cards-img" src="./img/laptop(1).jpg" alt="" width="370" />
-              <div class="cards-wrapper">
-                <h2 class="cards-header">Growing Business</h2>
-                <p class="cards-txt">Додаток</p>
-              </div>
+              <a class="cards-link" href="">
+                <div class="background-wrapper">
+                  <img class="cards-img" src="./img/laptop(1).jpg" alt="" width="370" />
+                  <div class="cards-transparent-box">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </div>
+                </div>
+                <div class="cards-wrapper">
+                  <h2 class="cards-header">Growing Business</h2>
+                  <p class="cards-txt">Додаток</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
