--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             ><span class="logo-nav">Web</span>Studio</a
           >
           <ul class="nav-list">
-            <li class="nav-items"><a class="nav-link active" href="./test.html">Студія</a></li>
+            <li class="nav-items"><a class="nav-link active" href="./index.html">Студія</a></li>
             <li class="nav-items"><a class="nav-link" href="./portfolio.html">Портфоліо</a></li>
             <li class="nav-items"><a class="nav-link" href="">Контакти</a></li>
           </ul>
